wiring up confirmation screen as last point of registration
